# devhub

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: 如何指定区域修改.md  当前状态与下一步.md  指定区域.md
docs/superpowers/plans/: 2026-06-16-devhub-mvp-implementation.md  2026-06-18-sftp-archive-actions.md  2026-06-18-sftp-directory-transfer.md  2026-06-18-sftp-transfer-basics.md  2026-06-19-redis-create-key.md  2026-06-20-database-management-a.md  2026-06-21-database-table-browser.md  2026-06-21-database-table-editing.md  2026-06-22-workspace-multi-pane.md  2026-06-24-app-operation-logging.md  (+2 more)
docs/testing/: manual-mvp-checklist.md
src/: App.css  App.test.tsx  App.tsx  main.test.tsx  main.tsx  testSetup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  credentials.rs  database.rs  logging.rs  mod.rs  redis.rs  settings.rs  sftp.rs  terminal.rs
src-tauri/src/core/: ai_client.rs  app_logger.rs  app_paths.rs  credential_store.rs  mod.rs  settings_store.rs  window_state.rs
src-tauri/src/db/: connection.rs  export.rs  history.rs  metadata.rs  mod.rs  query.rs  sql_file.rs  sql_files.rs
src-tauri/src/models/: ai.rs  database.rs  mod.rs  settings.rs  sftp.rs  terminal.rs
src-tauri/src/ssh/: client.rs  mod.rs  session_manager.rs  sftp_manager.rs  terminal_manager.rs
src-tauri/src/tests/: ai_client_tests.rs  capability_tests.rs  database_history_tests.rs  database_query_tests.rs  database_settings_tests.rs  database_sql_file_tests.rs  mod.rs  sensitive_config_tests.rs  settings_store_tests.rs  sftp_command_tests.rs  sftp_model_tests.rs  sftp_session_tests.rs  ssh_client_tests.rs  terminal_session_tests.rs  window_state_tests.rs
src/app/: AppIcon.test.tsx  AppIcon.tsx  AppShell.test.tsx  AppShell.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DockPanel.tsx  StatusBar.tsx  WindowControls.test.tsx  WindowControls.tsx  WorkspaceTabs.test.tsx  WorkspaceTabs.tsx  windowRuntime.ts
src/i18n/: I18nProvider.tsx  useI18n.ts
src/lib/: appLogging.test.ts  appLogging.ts  clipboard.ts  fileDialog.ts  tauri.ts  tauriDragDrop.ts  tauriEvents.ts
src/styles/: globals.css  globals.test.ts
(+56 files in other folders)
