[package]
name = "devhub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "6"
keyring = "3"
ssh2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.9"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
